Implement component conversion for ExprName